index nav fix spacing

--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -424,12 +424,12 @@
 /* -------------------------------------------------------------------------- */
 
 .index-nav {
-    padding: 100px 0;
+    padding: 100px 0 0;
     @include md {
-        padding: 50px 0;
+        padding: 50px 0 0;
     }
     @include sm {
-        padding: 30px 0;
+        padding: 30px 0 0;
     }
     &__grid {
         display: grid;
